--- a/_config.yml
+++ b/_config.yml
@@ -17,24 +17,29 @@ urls:
 author_logo: profile.png
 author: Kyle Rodriguez
 author_bio: >-
-  Hey there! I'm Kyle!
+  Hey there, I'm Kyle! I'm a software engineer from SoCal, currently living in Ann Arbor, Michigan. From 
+  reverse engineering (aka destroying, whoops) a GameCube controller at age 7, to building my first PC in
+  high school, I've always been passionate about working with and understanding how to use technology to 
+  its maximum potential. When I'm not working on a new project or "fixing" my electronics with a hammer,
+  you can probably find me playing or creating music in some capacity (working towards my first Spotify
+  release one of these days). Let's get in touch over some (virtual) coffee!
 author_email: "kyle@kyrod.com"
 author_location: United States
 author_website_url: https://kyrod.com
-typewrite-text: Stand-up is hard.
+typewrite-text: Thinking of something clever to put here...
 
 # Experiences
 author_work_experiences:
   - company_name: Groundspeed Analytics
     company_logo: groundspeed.png
     company_url: https://groundspeed.com
-    designation: Software Engineer
+    designation: Software Engineer (June 2019 - Present)
     description: >- 
-      Backend software engineer designing cloud-native systems which automate 
-      and simplify time-consuming operational processes. Maintains reliable continuous 
-      integration and deployment pipeline while developing comprehensive unit, integration, 
-      and load testing practices. Employs solid data model to ensure data is available 
-      for analysis, process optimization, and improvement of machine learning models.
+      I design and build cloud-native systems which automate 
+      and simplify time-consuming operational processes. I also work on maintaining reliable continuous
+      integration and deployment pipeline, while developing comprehensive unit, integration,
+      and load testing practices. Before moving into my engineering rols, I was a data analyst
+      working with the machine learning team to develop highly-accurate QA automations.
     visibility: true
 
 # Education
@@ -43,19 +48,33 @@ author_education_details:
     college_name: University of Michigan
     college_url: https://umich.edu
     college_degree: Economics, focus in Computer Science
-    description:
+    description: >-
+      Bass Trombone Section Leader, Michigan Marching Band - Barger Leadership
+      Institute Fellow - Residential College
     visibility: true
 
 # Projects
 author_project_details:
-  - project_thumbnail: goldify.png
-    project_title: Goldify
+  - project_title: Goldify
+    project_thumbnail: goldify.png
     project_description: >-
-      A Spotify API based React application which allows users to efficiently create 
-      the perfect personal Spotify playlist! This project maintains 100% test coverage, 
-      uses Material UI standards, and is built as a responsive application.
+      This is a Spotify API based React application which allows users to create the
+      perfect personal Spotify playlist! This project taught me first-hand how
+      to design an app with user experience in mind, learning the ropes of React and
+      working directly with users to create an enjoyable user experience.
+    visibility: true
 
-    project_url: https://goldify.app
+  - project_title: Morning Catch-Up
+    project_thumbnail: morningcatchup.png
+    project_description: >-
+      This project was my first real experience with python,
+      as well as with creating a user-facing service. This app uses a Django backend
+      and a python-based AWS Lambda function, which integrates with both Twitter and
+      Reddit's APIs, to handle the daily data-gathering and
+      publishing. While it's a bit rough around the edges, this project gave me a ton
+      of knowledge around error-handling, security, webhosting, and working with
+      public apis.
+    project_url: https://morningcatchup.herokuapp.com
     visibility: true
 
 # social links
@@ -63,7 +82,7 @@ github_username: kyrod
 linkedin_username: kyrod
 
 # formspree (contact form)
-formspree_email: unknown
+formspree_email: f/mbjqgjky
 
 # syntax highlighter
 markdown: kramdown
