--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ author_project_details:
 
 # social links
 github_username: kyrod
-linkedin_username: kyrod
+linkedin_username: kylemrodriguez
 
 # formspree (contact form)
 formspree_email: f/mbjqgjky
